# sleeplab-converters

./: LICENSE.txt  README.md  pyproject.toml  teszti
src/sleeplab_converters/: __about__.py  edf.py
src/sleeplab_converters/MESA/: convert.py
src/sleeplab_converters/STAGES/: convert.py  parse_annotation_names.py
src/sleeplab_converters/nox_cli_edf/: README.md  convert.py
src/sleeplab_converters/profusion/: convert.py
src/sleeplab_converters/somte/: convert.py
tests/: __init__.py
